--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/mdb.min.css">
     <!-- Your custom styles (optional) -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="manifest" href="manifest.json"></link>
 </head>
 
 <body style="margin-left:0px; margin-right:0px; overflow-y: hidden;">
