--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <!-- Collapsible content -->
     </nav>
     <!-- jQuery -->
+
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
     <script type="text/javascript" src="js/popper.min.js"></script>
@@ -72,6 +73,10 @@
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- Your custom scripts (optional) -->
     <script type="text/javascript"></script>
+    <script type="text/javascript"> import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
+
+const el = document.createElement('pwa-update');
+document.body.appendChild(el);</script>
 </body>
 
 </html>
