--- a/co.html
+++ b/co.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>TODO ABC</title>
+    <title>TODO ABC beta</title>
     <!-- MDB icon -->
     <link rel="icon" href="img/tdabc.png" type="image/x-icon">
     <!-- Font Awesome -->
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/mdb.min.css">
     <!-- Your custom styles (optional) -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="manifest" href="manifest.json"></link>
 </head>
 
 <body style="margin-left:0px; margin-right:0px; overflow-y: hidden;">
@@ -62,6 +63,7 @@
         <!-- Collapsible content -->
     </nav>
     <!-- jQuery -->
+
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
     <script type="text/javascript" src="js/popper.min.js"></script>
@@ -71,6 +73,10 @@
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- Your custom scripts (optional) -->
     <script type="text/javascript"></script>
+    <script type="text/javascript"> import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
+
+const el = document.createElement('pwa-update');
+document.body.appendChild(el);</script>
 </body>
 
 </html>
